# nutrIplantA

./: .env.example  .gitignore  .pr_agent.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: historia-usuario.md
.github/workflows/: ci-pr-to-develop.yml
docs/: GUIA_PASO_A_PASO_WINDOWS.md
docs/adrs/: ADR-07-refresh-tokens-blacklist.md  ADR-08-gateway-proxy-jwt.md
docs/arquitectura/: nutrIplantA_Arquitectura_v2.1.docx
docs/arquitectura/Arquitectura/: nutriPlantA.vpp  nutriPlantA.vpp.bak_000f  nutriPlantA.vpp.bak_001d  nutriPlantA.vpp.bak_002d  nutriPlantA.vpp.bak_003d
docs/backlog/: nutrIplantA_ProductBacklog_v1.0.docx
docs/bitacora/: sprint-00.md  sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  TopNavBar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/admin/: UsuariosPage.tsx
frontend/src/pages/agricultor/: CultivosPage.tsx  DashboardPage.tsx  DiagnosticoPages.tsx  NuevoCultivoPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
gateway/: Dockerfile  requirements.txt
gateway/app/: __init__.py  main.py
gateway/tests/: test_gateway_middleware.py
scripts/dev/: init-db.sql
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_create_users_table.py  0002_create_refresh_tokens_table.py
services/auth-service/src/auth/: config.py  container.py  main.py
services/auth-service/src/auth/api/: dependencies.py  exception_handler.py
services/auth-service/src/auth/api/dtos/: admin_dto.py  register_dto.py  session_dto.py
services/auth-service/src/auth/api/routes/: admin_routes.py  auth_routes.py  session_routes.py
services/auth-service/src/auth/domain/exceptions/: __init__.py  token_exceptions.py
services/auth-service/src/auth/domain/models/: refresh_token.py  user.py
services/auth-service/src/auth/domain/repositories/: i_password_hasher.py  i_refresh_token_repository.py  i_user_repository.py
services/auth-service/src/auth/domain/services/: admin_service.py  auth_service.py  session_service.py  token_service.py
services/auth-service/src/auth/infrastructure/persistence/: database.py  in_memory_refresh_token_repository.py  in_memory_user_repository.py  postgres_refresh_token_repository.py  postgres_user_repository.py  refresh_token_model.py  user_model.py
services/auth-service/src/auth/infrastructure/security/: argon2_password_hasher.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/integration/: test_admin_routes.py  test_register_endpoint.py  test_session_endpoint.py
services/auth-service/tests/unit/: test_admin_service.py  test_argon2_hasher.py  test_auth_service.py  test_dependencies.py  test_refresh_token_model.py  test_session_service.py  test_token_service.py  test_user_model.py
services/diagnostico-service/: Dockerfile  alembic.ini  pyproject.toml
services/diagnostico-service/alembic/: env.py  script.py.mako
services/diagnostico-service/alembic/versions/: 0001_create_cultivos_table.py  0002_create_diagnosticos_planes.py
services/diagnostico-service/src/diagnostico/: config.py  main.py
services/diagnostico-service/src/diagnostico/api/: dependencies.py
services/diagnostico-service/src/diagnostico/api/dtos/: diagnostico_dtos.py
services/diagnostico-service/src/diagnostico/api/routes/: cultivo_routes.py  diagnostico_routes.py
services/diagnostico-service/src/diagnostico/domain/exceptions/: __init__.py
services/diagnostico-service/src/diagnostico/domain/models/: cultivo.py  diagnostico.py  plan_abono.py
services/diagnostico-service/src/diagnostico/domain/repositories/: i_cultivo_repository.py  i_diagnostico_repository.py  i_vision_provider.py
services/diagnostico-service/src/diagnostico/domain/services/: cultivo_service.py  diagnostico_service.py  plan_abono_service.py
services/diagnostico-service/src/diagnostico/infrastructure/persistence/: database.py  in_memory_cultivo_repository.py  in_memory_diagnostico_repository.py  models.py  postgres_cultivo_repository.py  postgres_diagnostico_repository.py  postgres_plan_abono_repository.py
services/diagnostico-service/src/diagnostico/infrastructure/vision/: mock_vision_provider.py
services/diagnostico-service/tests/: conftest.py
services/diagnostico-service/tests/integration/: test_diagnostico_api.py
services/diagnostico-service/tests/unit/: test_config.py  test_cultivo_service.py  test_diagnostico_service.py  test_plan_abono_service.py
