[project]
name = "diagnostico-service"
version = "0.1.0"
description = "nutrI-plantA: servicio de diagnóstico nutricional en vid"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pydantic[email]==2.10.4",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "pyjwt==2.10.1",
    "dependency-injector==4.43.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "import-linter==2.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/diagnostico/api/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--tb=short", "-v"]

[tool.coverage.run]
source = ["src/diagnostico"]
omit = [
    "*/main.py",
    "*/__init__.py",
    "*/alembic/*",
    "*/postgres_cultivo_repository.py",
    "*/postgres_diagnostico_repository.py",
    "*/postgres_plan_abono_repository.py",
    "*/database.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.importlinter]
root_package = "diagnostico"

[[tool.importlinter.contracts]]
name = "domain no depende de infrastructure"
type = "forbidden"
source_modules = ["diagnostico.domain"]
forbidden_modules = ["diagnostico.infrastructure"]

[[tool.importlinter.contracts]]
name = "domain no depende de api"
type = "forbidden"
source_modules = ["diagnostico.domain"]
forbidden_modules = ["diagnostico.api"]

[[tool.importlinter.contracts]]
name = "infrastructure no depende de api"
type = "forbidden"
source_modules = ["diagnostico.infrastructure"]
forbidden_modules = ["diagnostico.api"]